tests/jastadd/negative/name_errors/L1/4_AssignmentToType.ob
MODULE TestModule;
	TYPE t = INTEGER;
BEGIN
	t := t
END TestModule.
